public/styles/gamerStyling.css
#page-content{
    display: grid;
    top: 0px;
    max-height: 100vh;
    max-width: 100vw;
    grid-template-columns: 70% 30%;    
    grid-template-rows: 5% 90% 5%;
}

#video-player{
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 2;
    grid-row-end: 2;
    text-align: center;
    width: 85%;
    padding: 5%;
    height: 80%;
}

#page-choices{
    grid-column-start: 2;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 2;
    display: flex;
    flex-direction: column;
    align-content: center;
    min-height:50vh;
}

#movie-selections{
    display: none;
    overflow-y: scroll;
    height: 45%;
}

.search-videos{
    height: 50%;
    margin: 5px;
}

#search-button{
    display: none;
    height: 5%;
}

#submit-video{
    height: 50%;
    margin: 5px;
}

#submit-video:hover{
    text-shadow: 0 0 0.5em orange, 0 0 0.5em orange,
    0 0 0.5em orange;
    transition: text-shadow .6s;
}

.choice-values{
    transform: translate(-50%, -50%);
    transform-origin: center center;
}

#inputs{
    height: 50%;
}

